fix bg z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,7 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
+    z-index: -1;
   }
 }
 
